Fact's author name has been added to fact page

--- a/views/fact_creation.ejs
+++ b/views/fact_creation.ejs
@@ -25,7 +25,7 @@
 				<input type="text" name="fact_title" required/><br>
 				<br>
 				<label>Содержимое</label>
-				<textarea name="fact_content" required></textarea><br>
+				<textarea name="fact_content" ></textarea><br>
 				<br>
 				<label>Фото</label>
 				<input type="file" name="fact_file"/><br>
